# PhairPlay

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: ci.yml  lint.yml
app/: build.gradle.kts
app/src/firetv/kotlin/com/phairplay/cast/: CastReceiver.kt
app/src/googletv/: AndroidManifest.xml
app/src/googletv/kotlin/com/phairplay/cast/: CastReceiver.kt  CastReceiverOptionsProvider.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fairplay_jni.c
app/src/main/kotlin/com/phairplay/: MainActivity.kt  PhairPlayApp.kt
app/src/main/kotlin/com/phairplay/airplay/: AirPlayReceiver.kt  AirPlayVideoPlayer.kt  AudioPlayer.kt  MdnsService.kt  NowPlayingInfo.kt  RtpInterleaved.kt  RtspHandler.kt  RtspRequestReader.kt  SdpParser.kt  VideoDecoder.kt
app/src/main/kotlin/com/phairplay/diagnostic/: LogBuffer.kt
app/src/main/res/drawable/: app_banner.xml  ic_airplay.xml  ic_notification.xml
app/src/main/res/layout/: activity_main.xml  card_protocol_status.xml  fragment_home.xml  fragment_settings.xml  screen_waiting.xml  settings_toggle_row.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-de/: strings.xml
docs/: TESTING.md
docs/guides/: CAST_APP_ID.md
docs/spec/: PROJECT_PLAN.md  REQUIREMENTS.md  TECHNICAL_SPEC.md
gradle/: libs.versions.toml
scripts/: release.sh
test-runner/: build.gradle.kts  settings.gradle.kts
test-runner/src/stubs/: AirPlayVideoPlayer.kt  PhairPlayService.kt  VideoDecoder.kt
tools/: collect-device-logs.sh
(+27 files in other folders)
